tests/NormalTests/paczka1/small_fuzzy/10382931.err
Error in line 2: wwElDFC3D A634 19,2
Error in line 1: cBNgc A909 90,1
Error in line 6: cBNgc S891 36,8
Error in line 5: wwElDFC3D A909 5,0
Error in line 9: bbS22h8hojL A909 33,3
